--- a/admin/src/main/resources/templates/information/create.html
+++ b/admin/src/main/resources/templates/information/create.html
@@ -4,28 +4,25 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">标题</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" />
+                    <input type="text" class="form-control" ng-model="item.title"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-2">分类</label>
                 <div class="col-sm-6">
-                    <select>
-                        <option>行业要闻</option>
-                        <option>行业要闻</option>
-                        <option>行业要闻</option>
+                    <select ng-model="item.category" ng-options="c.id as c.name for c in categories">
                     </select>
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-2">图片</label>
                 <div class="col-sm-10">
-                    <textarea ckeditor="editorOptions" ng-model="content"></textarea>
+                    <textarea ckeditor="editorOptions" ng-model="item.content"></textarea>
                 </div>
             </div>
         </div>
         <div>
-            <button type="button" class="btn btn-primary">
+            <button type="button" class="btn btn-primary" ng-click="submit()">
                 提交
             </button>
         </div>
