--- a/admin/src/main/resources/templates/category/childCategory.html
+++ b/admin/src/main/resources/templates/category/childCategory.html
@@ -21,7 +21,7 @@
                         {{$index+1}}
                     </td>
                     <td>
-                        <input type="text" ng-model="item.name" />
+                        {{item.name}}
                     </td>
                     <td>
                         {{item.updatedTime|date:'yyyy-MM-dd HH:mm:ss'}}
@@ -46,7 +46,7 @@
     </div>
     <script type="text/ng-template" id="productChildCategoryModal.html">
         <div class="modal-body">
-            是否{{item.state|reverseActiveFilter}}{{item.name}}
+            是否{{item.activate|reverseActiveFilter}}{{item.name}}
         </div>
         <div class="modal-footer">
             <button class="btn btn-primary" ng-click="ok()">OK</button>
