--- a/admin/src/main/resources/templates/subject/edit.html
+++ b/admin/src/main/resources/templates/subject/edit.html
@@ -1,25 +1,27 @@
 <div class="contentpanel">
-	<form class="form-horizontal" ng-submit="submit()" >
-		<div class="row">
-			<div class="form-group">
-				<label class="control-label col-sm-1" >标题</label>
-				<div class="col-sm-4">
-					<input type="text" class="form-control" ng-model="item.name"/>
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="control-label col-sm-1">摘要</label>
-				<div class="col-sm-11">
-					<input type="text" class="form-control" ng-model="item.summary" />
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="control-label col-sm-1">分类</label>
-				<div class="col-sm-11">
+    <form class="form-horizontal" name="subjectForm" ng-submit="submit()">
+        <div class="row">
+            <div class="form-group">
+                <label class="control-label col-sm-1">标题</label>
+                <div class="col-sm-4">
+                    <input type="text" name="title" class="form-control col-sm-5" ng-model="item.name" ng-maxlength="20" />
+                    <span ng-show="subjectForm.title.$error.maxlength">长度应小于20</span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-1">摘要</label>
+                <div class="col-sm-11">
+                    <input type="text" class="form-control" name="summary" ng-model="item.summary" ng-maxlength="100" />
+                    <span ng-show="subjectForm.summary.$error.maxlength">长度应小于100</span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-1">分类</label>
+                <div class="col-sm-11">
                     <select class="w300" ng-options="c.id as c.name for c in categories" ng-model="item.category" required="true"></select>
-				</div>
-			</div>
-			<div class="form-group lhg">
+                </div>
+            </div>
+            <div class="form-group lhg">
                 <label class="control-label col-sm-1">图片</label>
                 <div class="col-sm-2">
                     <img ng-src="{{item.cover}}" width="100" height="100" />
@@ -31,38 +33,38 @@
                     </button>
                 </div>
             </div>
-			<div class="form-group">
-				<label class="control-label col-sm-1">内容</label>
-				<div class="col-sm-6">
+            <div class="form-group">
+                <label class="control-label col-sm-1">内容</label>
+                <div class="col-sm-6">
                     <textarea ckeditor="editorOptions" ng-model="item.content"></textarea>
-				</div>
-			</div>
-			<div class="form-group">
-			</div>
-		</div>
-		<div class="form-group">
-			<label class="control-label col-sm-1">解决方案:</label>
-			<div class="col-sm-6">
-				<table class="table table-bordered">
-					<thead>
-						<tr>
-							<th>名称</th>
-							<th>状态</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="s in item.solutions track by $index">
-							<td> {{s.name}}</td>
-							<td> {{s.active|activeFilter}}</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-		</div>
-		<div class="col-xs-offset-3 panel-footer">
-			<input type="submit" id="submit" class="btn btn-primary" value="提交" />
-			<a class="btn btn-primary" href="#/subject/{{item.id}}/solutions">修改解决方案</a>
- 	  		<alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">{{alert.msg}}</alert>
-		</div>
-	</form>
+                </div>
+            </div>
+            <div class="form-group">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-1">解决方案:</label>
+            <div class="col-sm-6">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th>名称</th>
+                            <th>状态</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="s in item.solutions track by $index">
+                            <td> {{s.name}}</td>
+                            <td> {{s.active|activeFilter}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="col-xs-offset-3 panel-footer">
+            <input type="submit" id="submit" class="btn btn-primary" value="提交" />
+            <a class="btn btn-primary" href="#/subject/{{item.id}}/solutions">修改解决方案</a>
+            <alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">{{alert.msg}}</alert>
+        </div>
+    </form>
 </div>
