--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -74,22 +74,28 @@
 				return;
 			}
 			code.attr("disabled","disabled");
-			code.html("60秒后重发");
+			var time = 60;
+			var timer = setInterval(function(){
+				code.html(time + "秒后重发");
+				time--; 
+				if(time == -1){
+					clearInterval(timer);
+					code.removeAttr("disabled");
+					code.html("获取验证码");
+				}
+			},1000);
 			$.ajax({
 				type : 'POST',
-				url : '/users/captcha',
+				url : '/providers/captcha',
 				data : {'phone':phone.val()},
 				success : function(data){
-						var time = 59;
-						var timer = setInterval(function(){
-							code.html(time + "秒后重发");
-							time--; 
-							if(time == -1){
-								clearInterval(timer);
-								code.removeAttr("disabled");
-								code.html("获取验证码");
-							}
-						},1000);
+					if(data=="success"){
+						
+					}else if(data == "limit"){
+						phone.after('<i class="error" id="phoneError">短信次数已达上限</i>');
+						code.removeAttr("disabled");
+						code.html("获取验证码");
+					}
 				}
 			});
 		});
