--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -2078,10 +2078,11 @@ a.fff{
 	text-align:center;
 }
 .pw-point{
-	width:300px;
+	width:560px;
 	margin:auto;
+	line-height:42px;
 	padding-left:55px;
-	font-size:30px;
+	font-size:27px;
 	background:url('../img/icon-alt.png') no-repeat;
 }
 .pw-fail{
